# Lifeguard

./: Cargo.toml
.github/workflows/: build_binaries.yml
resources/stubs/stdlib/: functools.pyi
resources/stubs/stdlib/asyncio/: locks.pyi
src/: Cargo.toml  cache.rs  config.rs  csr_graph.rs  effects.rs  exports.rs  imports.rs  lib.rs  manual_override.rs  module_safety.rs  output.rs  project.rs  runner.rs  source_analyzer.rs  stub_analyzer.rs  test_lib.rs
src/commands/: analyze.rs  analyze_binary.rs  analyze_library.rs  run_tree.rs
src/pyrefly/: definitions.rs
testdata/sample_project/: importer.py
tests/: blocks.rs  cache.rs  calls.rs  output.rs  port_test_catch_import_cycles.rs  port_test_interpreter.rs  source_analyzer.rs  stubs.rs
tests/e2e/: test_e2e.rs
