[patch.crates-io]
backtrace = { git = "https://github.com/rust-lang/backtrace-rs", rev = "df979dcf80027eb047d7bb9e0874710c15009f31" }
cxx = { git = "https://github.com/facebookexperimental/cxx.git", rev = "d98f6c434f8e6a018533c31a7a4cf7cdc7252210" }
cxx-build = { git = "https://github.com/facebookexperimental/cxx.git", rev = "d98f6c434f8e6a018533c31a7a4cf7cdc7252210" }

[workspace]
members = ["resources", "src", "tests", "tests/e2e"]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/facebook/Lifeguard"
